--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
                     </div>
                     
                     <div class="summary1">
-                      <span><img src="/assets/images/icon-reaction.svg" />Reaction </span> 
+                      <span><img src="/assets/images/icon-reaction.svg" alt="icon-reaction"/>Reaction </span> 
                       <div class="score">80 <span class="overall">/ 100</span></div>
                     </div>
 
                     <div class="summary2">
-                      <span><img src="/assets/images/icon-memory.svg" />Memory </span> 
+                      <span><img src="/assets/images/icon-memory.svg" alt="icon-memory"/>Memory </span> 
                       <div class="score">92 <span class="overall">/ 100</span></div>
                     </div>   
                     
                     <div class="summary3">
-                      <span><img src="/assets/images/icon-verbal.svg" />Verbal </span> 
+                      <span><img src="/assets/images/icon-verbal.svg" alt="icon-verbal"/>Verbal </span> 
                       <div class="score">61 <span class="overall">/ 100</span></div>
                     </div>
 
                     <div class="summary4">
-                      <span><img src="/assets/images/icon-visual.svg" /> Visual </span> 
+                      <span><img src="/assets/images/icon-visual.svg" alt="icon-visual"/> Visual </span> 
                       <div class="score">72 <span class="overall">/ 100</span></div>
                     </div>
 
